--- a/src/view/home/home.css
+++ b/src/view/home/home.css
@@ -1,5 +1,18 @@
+body
+{
+    margin-left: -1px;
+}
+
+
 .container
 {
     background-color: aquamarine;
     min-height: 100vh;
+   
+}
+.back-img
+{
+    display: inline-block;
+    height: 1000px;
+    width: 2300px;
 }
